<resources>
    <string name="app_name">wenzhou</string>
    <string name="nxj">&#160; &#160; &#160; &#160;楠溪江位于浙江省温州市北部的永嘉县境内，南距温州市区26公里 ，东与雁荡山毗邻，西接缙云仙都。楠溪江是国家AAAA级旅游区，世界地质公园。楠溪江和雁荡山这两个国家级名胜区之间有石桅岩至雁湖的旅游专用公路。
        \n&#160; &#160; &#160; &#160;楠溪江物种丰富，群落多样，生态系统保存比较完整。该处物种集楠溪江物种的82.5%，达1000多种；生长分布有国家重点保护植物14种，其中国家一级保护植物有银杏、南方红豆杉共2种；国家二级重点保护植物有福建柏、香榧、长叶榧树、樟树、闽楠、花榈木、红豆树、鹅掌楸、厚朴、凹叶厚朴、香果树、榉树共12种；动物物种也很丰富。
该处森林群落多样，有红楠林、绒毛润楠林、兰果树林，还有壳斗科的、桦木科的林分等等；森林生态系统保存完整，是典型的地带性森林植被群落。\n&#160; &#160; &#160; &#160;楠溪江划分为七大景区：即楠溪江及沿江农村文化景区(简称楠溪江岩头中心景区)、大若岩景区、石桅岩景区、北坑景区、水岩景区、
        陡门景区、四海山景区，七大景区总计有800多处景点。主要景点有：龙河古渡，百丈瀑，石门台，芙蓉三崖，藤溪潭瀑，十二峰，陶公洞，永嘉书院，崖下库，石桅岩，苍坡村，芙蓉古村，狮子岩，太平岩、崖下库、丽水古街等。
楠溪江源头及中上游两岸，有多姿多彩、千奇百怪的瀑布50多处，两岸有3万亩滩林。楠溪江贯穿永嘉南北，流域集雨面积2429平方公里，溪流自北往南，末处注入瓯江，流归东海。</string>
    <string name="jxy">&#160; &#160; &#160; &#160;江心屿，位于温州市区北面瓯江中游，呈东西长、南北狭的形状，属于中国四大名屿。该屿风景秀丽，东西双塔凌空，映衬江心寺，历来被称为“瓯江蓬莱”。历代著名诗人谢灵运、孟浩然、韩愈、陆游、文天祥等都曾相继留迹江心屿。\n&#160; &#160; &#160; &#160;
千百年来文人留有叹咏江心屿著名诗章近800篇。屿中名胜古迹众多，如宋文信国公祠、浩然楼、谢公亭、澄鲜阁及博物馆、革命烈士纪念馆、工人疗养院均系省市级文保建筑。现建有儿童乐园、游乐场、情人岛、盆景园、拓展园、戛纳名人摄影公馆、共青湖等。
        \n&#160; &#160; &#160; &#160;江心屿全年温度适宜，均适合出行。其属中亚热带季风气候，全年温度适中，热量丰富；雨水充沛，空气湿润；四季分明，气候多样，季风显著。一年之中，一月份最冷，平均气温7.6℃；七月份最热，平均气温27℃；全年平均气温18℃。如果是7至9月份前往江心屿，当地常伴有台风，最好注意天气变化情况，择日择时。</string>
    <string name="wmj">&#160; &#160; &#160; &#160;五马街，中国著名商业街，古称五马坊，温州旧城古街道之一，东起解放街与公园路相接，西至蝉街与府前街相交，街长四百米，宽十二米，街两侧拥有十四条小巷。相传始于东晋，唐宋沿袭不变，清代改名五马街，一九三四年改名中山路，一九四九年后恢复五马街之名。一九七四年改为沥青路面。一九八四年四月定为温州市标志性购物步行街。
     \n&#160; &#160; &#160; &#160;1999年，被命名为国家级「百城万店无假货」示范街。2000年到2001年对五马街进行改建，保留了原有的中西合璧的建筑风格，以及第一百货商店、五味和副食品商场、金三益绸布店、老香山药店、温州酒家等一批老字号。
     \n&#160; &#160; &#160; &#160;旧时五马街除了上面提到的商铺外，还有老香山、乾宁斋、元昌、葆大等参茸药号及徐德昌、正丰和、同人和等大商铺。如今的五马街，一些延续至今的老店仍很热门，又集聚了康奈、奥康、吉尔达皮鞋；报喜鸟、庄吉服饰；大虎打火机等温州众多新兴名牌轻工产品的专卖店。店肆毗连，商品琳琅，商业繁华，魅力不衰，五马街依然是温州最繁忙的商业街。</string>
    <string name="njd">&#160; &#160; &#160; &#160;南麂岛，国家级自然保护区，中国最美海岛，国家4A级景区别名海山，古代又写作“南己山”，其位于浙江省平阳县鳌江口外30海里的东海海面上，距市区50海里。是一座旅游岛屿 ，南麂岛是南麂列岛52个岛屿中最大的岛屿.
     \n&#160; &#160; &#160; &#160;南麂列岛位于浙江省东南部海面，隶属平阳县鳌江镇，整个列岛由大小52个（面积大于500平方米）岛屿组成，海岸线总长75km，陆域面积11.13k㎡。南麂岛地处亚热带，海洋的自然环境条件优越，特色鲜明。1990年9月经国务院批准列为我国首批五个国家级海洋类型自然保护区之一。
     \n&#160; &#160; &#160; &#160;南麂列岛受海浪和潮汐的侵蚀和冲击，基岩裸露，且多呈陡崖峭壁。水深一般在15m-25m之间，南麂岛东北和西南两侧为深水通道，其水深在30m以上，最深处达45m。 南麂岛为主岛，位于列岛中央，其地理坐标为27°27′N，121°05′E，东西最宽处3.3km，最窄处仅150m；面积为7.64k㎡，最高点海拔229m，岸线长24.8km，有大沙岙、火炬岙和马祖岙、国姓岙4个海湾，分置于东南和西北两个方向，以致南麂岛形似奔麂状而得名。
     \n&#160; &#160; &#160; &#160;南麂列岛地处亚热带海域，气候温和湿润，四季分明。南麂列岛远离大陆，海水清澈，含沙量低，海域底质以粉砂质粘土为主，海底地形自西向东南下倾，水深一般在15-25米之间，南麂岛东北和西南两侧为深水通道，其水深在30米以上，最深处达45米。该区域以海蚀地貌为主，岸线曲折，岬角丛生，海湾众多，礁石密布，沙滩多样，是浙闽沿岸流与台湾暖流交汇和交替消长的区域。气候温和，年平均气温为16.5℃，夏无酷暑，冬无严寒。</string>
    <string name="yxnt">&#160; &#160; &#160; &#160;南塘文化旅游区位于鹿城区中心地带，主要景点包括南塘河、南塘风貌街、白鹿洲公园、文化村、庄头滨水公园。南塘河及南塘街均有千年历史，有丰富的文化底蕴，且文化村内拥有谷超豪故居，全面展示了温州“数学之乡”的特点和风采。南塘，顾名思义，乃城南之堤塘也，“印象南塘”已成为极具特色的“温州城市客厅”。
     \n&#160; &#160; &#160; &#160;“印象南塘”景区已先后投入25亿元用于景区资源保护和景观提升。景区保护制度健全，执行到位，景区的建设与管理严格按照温州市文物保护管理、生态保护及文化保护相关法律法规及政策执行，确保了自然生态与文化保护到位。
     \n&#160; &#160; &#160; &#160;　“印象南塘”注重五水共治，大力做好城市地下排污管道建设，将各类污水纳入城市排污系统，杜绝向塘河直接排污，并同步做好河岸驳坎建设，开展河底清淤等工作。经过治理后的景区环境效益非常突出，南塘河沿岸的脏乱差及发黑发臭的河水得到了有效治理，而且修复了水生态、美化了水环境、保障了水安全、提升了水功能。
     \n&#160; &#160; &#160; &#160;　“印象南塘”景区所在区域是温州历史文化精华区，也曾是现代文明城市的疮疤区，通过大量保护利用工程建设和社会投入，现在的“印象南塘”已成为综合性、多样化的文化休闲旅游区。</string>
    <string name="yds">&#160; &#160; &#160; &#160;雁荡山，首批国家重点风景名胜区，国家级“卫生山、安全山、文明山”、国家文明风景名胜区、国家AAAAA级旅游区、全国文明风景旅游区示范点、“世界地质公园”等称号。位于中国浙江省温州市内。因主峰雁湖岗上有着结满芦苇的湖荡，年年南飞的秋雁栖宿于此，因而得名“雁荡山”。雁荡山主要有灵峰、灵岩、大龙湫、三折瀑、雁湖、显胜门、羊角洞、仙桥八大景区，有500多处景点。素以独特的奇峰怪石、飞瀑流泉、古洞畸穴、雄嶂胜门和凝翠碧潭扬名海内外，被誉为“海上名山，寰中绝胜”，史称“东南第一山”。其中，灵峰、灵岩、大龙湫三个景区被称为“雁荡三绝”。雁荡山的灵峰夜景，灵岩飞渡是其两大特别景观。因山顶有湖，芦苇茂密，结草为荡，南归秋雁多宿于此，故名雁荡。
     \n&#160; &#160; &#160; &#160;雁荡山属亚热带海洋性气候，雨量充沛，气候温暖，冬无严寒，夏无酷暑。年平均气温13.5℃，最冷一月平均气温5～7℃，极端最低气温一7℃，最热7月平均气温27℃，极端最高气温33℃，平均无霜期269天。雁荡山年平均降雨量1935.6毫米，年最大降水量2127毫米，平均相对湿度77%。季节性降雨明显，夏初5～6月梅雨季节，阴雨连绵，雨量占全年的26～28%，7～9月受台风影响多雷阵雨或大暴雨，雨量占全年3340%，平原谷地易受水灾。主峰海拔1056.5米，有阻挡北来寒流作用。
     \n&#160; &#160; &#160; &#160;雁荡山大尺度的奇特景观形象，给诗人、画家、文人学士以强烈的美感和灵感。于此赋诗作画，留下大批作品，其中诗词5000多首，以及龙鼻洞等400多处摩崖石刻，还有南阁牌坊等历史古迹。清人施元孚游寝雁荡山十年后提出“游山说”，说的是中国古代游览山水活动中回归自然，与大自然精神往来的精神文化活动的经验总结，这与清末学者魏源提出的“游山学”是一致的。</string>
    <string name="tls">&#160; &#160; &#160; &#160;铜铃山国家森林公园景区位于文成县,位于岩门大峡谷上游的叶胜林场境内，长约5公里，面积2755公顷。境内拥有上万亩的原始次生林，为浙南保存最好的原始阔叶林。其中以铜铃山峡中经万年激流旋冲而成的壶穴奇观最为著名，峡内瀑连瀑，潭叠潭，湍流雷轰，震心慑憾，峡谷摩幻，称为“华夏一绝”。浙江省向来以山水秀美闻名全国，其中尤以浙东与浙南的自然风光最为绮丽多姿。铜铃山便是浙南文成县一处风光独美又鲜为人知的风景名胜区。铜铃山隐藏在文成县城西40公里的崇山峻岭之中，景区内峰峦叠翠，峡谷幽深。如今这里属国家重点风景名胜区百丈漈的一个组成部分，又是国家森林公园，森林覆盖率达95%以上，因而有“天然氧吧”之称。铜铃山的秀美归纳起来有两个方面：一是森林栈道魅力诱人，二是壶穴瀑布全国独有。
     \n&#160; &#160; &#160; &#160;铜铃山更为神奇的是景区内那处全国独一无二的壶穴瀑布。在铜铃山峡那条由高而低的峡谷中，一个个宛如巨大石盆般的水潭，排列而下，有的坐落在谷涧，有的镶嵌于谷壁，有的像酒坛，有的似浅井，有的浑圆光溜，有的穴连穴。潭穴蓄水，水清如碧玉。这琼浆玉液般的瀑布由高而低，经上一个潭穴，流入下一个潭穴，奔腾冲泻，哗哗啦啦，十分有趣。我国著名风景专家、北大教授谢凝高实地考察后把这种瀑布定位为“壶穴奇观，华夏一绝”。这处壶穴瀑布完全是大自然巧夺天工的杰作，由铜铃峡洪水急流经千万年旋转冲刷而成。为方便旅客观赏起见，如今在峡谷左侧的岩壁上建成一条由钢条焊接而成的栈道，如游龙般蜿蜒于悬崖峭壁间，从谷底远远望去，十分壮观。由文成县城去铜铃山，如走盘山沙土老公路，需要3至4小时，而且路况较差，旅客要受车辆颠簸与尘土扑面之苦，然沿路可观赏国内难得一见的岩门大峡谷壮观旖旎的风光。此处大峡谷高达1100米，逶迤百余公里，远眺群山层峦叠嶂，近观谷底江水奔流，绿竹似海到处一片葱翠。
     \n&#160; &#160; &#160; &#160;公园内尚有保存完好的常绿阔叶原始次生林1000公顷。境内动植物资源丰富，植物类有207科762属2042种，其中列入国家保护的有银钟花、连香树、福建柏、天竺桂、花榈木、鹅掌楸等30多种；动物类有58科119属175种，其中有国家重点保护的珍稀动物短尾猴、黄腹角雉、娃娃鱼、猫头鹰、穿山甲等20多种。在郑坑源林区天然硬阔叶林遮天盖地，大的胸径约在1～2米之间，并有碗口粗藤本植物缠绕于大树上，构成乔、灌、藤、草自然结合的天然森林生态景观。观赏植物种类繁多，有观花类31种、观果类20种、观叶类26种、观树形类18种。四季景观明显，春季鸟语花香，夏季绿海幽深，秋季红叶送情，冬季银装素裹。林中人迹罕至，素为珍禽野兽生息之所，黄腹角雉、猫头鹰、野猴、野猪、野兔、毛冠鹿、五步蛇等时有出没；林间山路崎岖，攀登艰险，适宜勇敢者进行森林探险。同时，林内绝无污染，空气清新，水质洁净，花草芬芳，是理想的森林浴场。胜川桃溪景区紧靠飞云湖，境内竹林茂盛，溪水源远流长。进入景区，竹海茫茫，林涛阵阵，清风徐徐，溪水潺潺。春季，雨后竹笋节节拔高，茁壮成长；夏季，瀑布气势磅礴，有如蛟龙翻滚，咆哮而下，有似白色飘带，随风飘拂，泉石相击，水花飞溅，阳光照射，彩虹缤纷。沿途可游览擎天柱、木鱼岩、金蟾岩、老虎山、水洞山、仙梯倒架、缸遥坦、龙井等自然胜景，欣赏古朴的小桥、流水、田园、农家等山村风光。
     \n&#160; &#160; &#160; &#160;境内山峦叠翠、峡谷幽深、溪瀑潺潺、修竹茂林、奇花异草，野生动物群多。尤以“壶穴”景观名闻天下，国内罕见，堪称“绝景”。森林覆盖率达95%，空气清新，富含负离子及多种植物杀菌素、萜烯芳植物，十分有益于人身健康，达到建脑又健身的功效。</string>
    <string name="msjj">&#160; &#160; &#160; &#160;米塑又称“粉塑”，是用煮熟的米粉团为原料，通过揉、捏、掐、刻等多种手法，制成各种人物、走兽、花鸟的民俗工艺。其作品大小不一，大的高达数米，小的只有二三厘米，大都用于喜庆节日和庆祝寿辰等。
        \n&#160; &#160; &#160; &#160;温州米塑，历史悠久，源远流长，是素称“百工之乡”———温州民间工艺园中一朵艳丽的奇葩。温州民间有个习俗，每逢喜庆节日、婚丧嫁娶或庆祝寿辰，都要捏制米塑。据传，这一习俗早在宋朝时就已出现。经过千余年的传承，米塑工艺流程日臻完善，与北方的“面塑”并称为中国食品塑作工艺上的双绝。</string>
    <string name="mszz">&#160; &#160; &#160; &#160;以煮熟的米粉团为原料，采取揉、捏、掐、刻、扮等手法，用多种色彩精制成人物、龙凤、花鸟、走兽等工艺品。正背两面还常塑有《三国志》、《封神榜》、《西游记》、《水浒传》的戏曲人物，染上色彩后，惟妙惟肖，让人真假难辨。与北方的面塑不同，温州米塑大小不限，有的高达数米，防蛀和保存的难度极大。</string>
    <string name="msls">&#160; &#160; &#160; &#160;传说孙武用米做成蟠桃状充寿桃为母亲做寿是米塑工艺的开始。温州米塑历史悠久，而据记载，温州捏制米塑的民间习俗早在宋朝时就已出现，已有千余年的历史。多用于寿庆、婚嫁、筵席、礼佛等场合。重阳糕上更不可少。尤其在农历三月“拦街福”寿桃山上，众多米塑戏剧人物风姿各异，情韵生动。米塑《济公斗蟋蟀》，神形兼备，妙趣横生，展出时轰动鹿城。温州米塑艺术家邵永桂还应邀赴日本作现场艺术表演，颇受赞赏。</string>
    <string name="mssy">&#160; &#160; &#160; &#160;米塑，是民间流传久远，颇有地域特色的捏塑艺术，人物走兽，花果草木，形象逼真，独具神韵。因其取材于用粳米做成的馍糍而名曰米塑。它主要用于婴孩“百廿日”、“周岁”，老人做寿以及丧葬祭祀等等。
        \n&#160; &#160; &#160; &#160;米塑作品主要靠手工将馍糍（或面粉）和以颜料揉捏而成，但细微之处，如人物的五官、衣褶，花卉的蕊、瓣、枝、叶等等，则用骨制的形状不一的小刀具雕镂、装点。塑后，涂上麻油（无色透明），使其更显得流光溢彩，引人入胜。
        \n&#160; &#160; &#160; &#160;一般用于婴孩“百廿日”或周岁馈赠族亲乡邻的米塑比较简单，每个馍糍做就的小寿桃上衬以捏塑的红花绿叶（尤以牡丹花为多），故小寿桃又称花桃。但往昔一些殷实人家，每逢外甥周岁时，除了送上一百或数百个花桃外，还要加送一对米塑龙凤桃（每个需用五斤米左右），玲珑剔透的“八仙”塑像分插在龙桃和凤桃上（一边四个人物），颇具对称和谐之美。
        \n&#160; &#160; &#160; &#160;米塑中的大寿桃和“路头祭”，最能显示米塑艺人的高超技艺。往昔一些老人做寿时，做一个大寿桃得用上百来斤米。要做这样的寿桃，先要做一个桃形的木质骨架，上设梯形的五级台阶；大寿桃分为五段制成，依次叠上去，而每级台阶又排列着很多小寿桃，上插戏曲人物，高低参差，颇为壮观。一般顶层为福、禄、寿、禧（人物），往下一层为“八仙”，再往下几层是《西游》、《三国》、《水浒》等戏曲人物，多者达百余个，每个身高十一、二厘米，姿态各异，栩栩如生。“路头祭”是老人丧葬时由女婿出钱请艺人捏塑的祭品，待葬后“回灵”时，摆在路口拜祭先辈。十余只盛着泥巴的木制大盆陈列于大木桌上，上插“二十四孝”人物和其他戏曲人物，下首摆着苹果、梨子、桔子和鲳鱼、墨鱼等米塑祭品，引来人流如潮，个个伸颈踮足观看。</string>
    <string name="oxjj">&#160; &#160; &#160; &#160;瓯绣，又称画帘，是浙江温州的地方传统艺术，产于瓯江地区；也是浙江“三雕一绣”特种工艺品之一，由中国传统刺绣发展而来。它与中国四大名绣（湘绣、苏绣、蜀绣、粤绣）齐名。瓯绣是中国出口名绣之一，不仅被国家珍藏，还被作为国礼赠送，有“发绣外交”之说。
        \n&#160; &#160; &#160; &#160;瓯绣是从装饰生活用品逐渐发展起来的刺绣工艺，早期的绣品有神袍、戏装、寿屏等，后来又扩展到刺绣山水、人物、走兽、书法等，具有较高的观赏价值和装饰效果。瓯绣是中国刺绣工艺中独具特色的精品。</string>
    <string name="oxystd">&#160; &#160; &#160; &#160;瓯绣构图精练，纹理分明，针脚齐整，针法多变，绣面光亮适目，色泽鲜泡调和，动物羽毛轻松活泼，人物、兰竹都能绣得精巧传神。它的风格特点是“主题突出，色彩鲜艳，构图精练，绣理分明。”具有浓厚的装饰性和地方风格。它的制作方法是：将毛竹刮去青皮,通过分层片,煮熟抽丝，编织成竹帘，然后用颜料和彩线在上面制成作品，针法类型有断针、滚针、乱针等20多种。古时温州少女“十一十二娘梳头，十二十三娘教绣”，具有刺绣的优良传统。
        \n&#160; &#160; &#160; &#160;毛竹抽丝编织制成，用彩线在上面绘出花鸟、山水或人物，所以也称作“画帘”。 瓯绣制品针法繁多，做工精细，以刺绣人物为绝招，具有色彩鲜艳夺目、绣面光亮生动、绣画巧妙结合、针法匀称灵活、针脚齐平、构图简练、主题突出等特点。</string>
    <string name="oxccyy">&#160; &#160; &#160; &#160;瓯绣作为温州州地区最具代表性的民族民间工艺 之一，具有高度的文化艺术价值。深入挖掘它的艺术价值、学术价值、民俗学价值等方面的文化价值，使其更具有产业化的文化蕴涵基础。
        \n&#160; &#160; &#160; &#160;政府应该扶植和引导像瓯绣这样的传统工艺、 非物质文化遗产，给它们创造良好的环境。虽然在解放后，瓯绣一定程度上进入了工厂（产业）化的 阶段，由于其它原因，仅有少数人在从事瓯绣生产和销售，在市场经济中，靠个人单薄的力量是形不成强大的生产、消费市场。政府要为 瓯绣产业的发展创造氛围和环境，加以引导，提供 政策保障，特别是从产业的发展、体制的创新、人才的培养、激励机制等方面加大创新和改革力度， 搭建推动瓯绣发展的产业、体制和人才三大基础平 台，进一步发挥瓯绣的历史和工艺优势，壮大瓯绣 产业，打造瓯绣产业集群。</string>
    <string name="gcjj">&#160; &#160; &#160; &#160;温州鼓词，又称“瞽词”或“盲词”，俗称“唱词”，是浙南地区最大的曲艺种类，亦为华东和浙江省的主要曲种之一。
        \n&#160; &#160; &#160; &#160;温州鼓词长于抒情，善于叙事，通俗易懂，内含丰富；唱腔押韵，音节和谐，保持了民间说唱音乐的特色。最具代表性的传统曲目有《陈十四娘娘》《十二红》等。
        \n&#160; &#160; &#160; &#160;温州鼓词发源于温州瑞安，流布于温州、青田、玉环等地区。2006年5月20日，浙江省瑞安市申报的“温州鼓词”经国务院批准列入第一批国家级非物质文化遗产名录。</string>
    <string name="gcystd">&#160; &#160; &#160; &#160;温州鼓词按表演方式，可以分为两种：一种叫“平词”，指演唱历史传书、言情小说、武侠小说的鼓词。凡逢红白喜事，或款待客人，或因争端认错罚词，曲调文雅，抒情达意，赏心悦目；还有一种叫“大词”，又称经词，也称“娘娘词”，都在庙宇中演唱，其形式颇似一种祭祀仪式。唱大词时，用一鼓一拍，擂大鼓，敲大锣，曲调高亢、粗犷，比较原始，可以连唱几昼夜。
        \n&#160; &#160; &#160; &#160;温州鼓词的表演形式以一人演唱为主，称为单档。演唱时，艺人的右前安放扁鼓，其下的発脚上系一抱月（梆），前围幔，正中平摆牛筋琴。新中国成立后，一些艺人又在右前凳脚上挂堂锣或钗，以增加表演气氛。表演时，艺人端坐椅上，左手执拍，右手持鼓签（竹签），敲奏琴、鼓、梆、锣。温州鼓词有其鲜明的说唱特点，它完全依赖于嘴上快慢得当、轻重有序的“口劲”，要求表演者兼生、旦、净、末、丑于一身，做到交代情节要分明，神态表情要逼真，讲究抑扬、顿、挫，辅之以动作、手势，从而在嘴上幻化出千姿百态的人物形象，营造出纷繁复杂的各种氛围。
        \n&#160; &#160; &#160; &#160;温州鼓词的唱腔曲调是在不断借鉴、创新中发展起来的。原始的鼓词曲调平板单调，基本上是吟唱式的上下句结构。后来，艺人们通过吸收民间音乐如小调、田歌等，借鉴戏曲音乐如京剧、越剧、瓯剧、高腔、梆子、黄梅戏，不同程度地套用戏曲曲牌音乐等，形成了各自不同的唱腔和艺术流派，丰富并发展了鼓词。鼓词唱腔板式和戏曲一样，轻重缓急、错落有致。大致可归纳为“原板”、“慢板”、“快板”、“紧板”、“泛板”、“倒板”、“清板”、“散板”、“数板”等。</string>
    <string name="gcccbh">&#160; &#160; &#160; &#160;随着人们物质消费方式和生存观念的改变，温州鼓词也遇到了一些生存和发展的问题。首先，鼓词演出场所有限。其次，人才吸收困难，经济发达的地区，学习传统曲艺的人不多。最后，艺人追逐经济利益现象突出。最近十来年，大部分温州鼓词艺人在陈十四庙唱《陈十四娘娘》，演唱现代词和传统词的剩余不多，如何传承下去已成为一个难题。
        \n&#160; &#160; &#160; &#160;在词场鼓词逐渐退出历史舞台的时候，随着新技术的革新，以娱乐作为主要表达方式的新媒体技术日益步人人们的日常生活，古老的鼓词表演与现代媒介技术相结合，依靠全新的音像技术，实现数字化传播，音像鼓词开始流行。音像鼓词凭借现代传媒技术的强大传播力而成为当下温州鼓词重要的传播形式。</string>
    <string name="osjj">&#160; &#160; &#160; &#160;瓯塑，俗称彩色油坭塑，又称“彩色浮雕”，是浙江温州独有的民间艺术，地方传统工艺美术品之一。它是用桐油和泥碾细合成为原料，运用堆塑技艺的手法，用于装饰寺院、庙宇门壁和民间嫁妆品，如梳妆盒以及家具漆器等。源于汉代，由中国漆器艺术中的堆漆工艺发展演化而成，色彩丰富，技法繁多，题材广泛，规格不限，广泛应用于建筑浮雕、壁画、装饰图案及艺术挂件等。“瓯塑”与“黄杨木雕”“东阳木雕”“青田石雕”并称“浙江三雕一塑”。
        \n&#160; &#160; &#160; &#160;瓯塑是浙江省政府认定首批“浙江传统优秀工艺美术品类”之一，首批浙江省优秀非遗旅游商品，列入省级重点保护项目范围</string>
    <string name="ossfts">&#160; &#160; &#160; &#160;西洋浮雕的主要理论是“按比较压缩”，国内浮雕的主要理论是“纳光纳阴”。手法灵活地吸收两种不同的浮雕手法，常以前者表现以面为主的高浮雕，后者表现以线为主的低浮雕；前者塑造画面中轮廓清新、形象突出的近景和主体，后者塑造浅淡的远景。有时为了突出主体，给人以实体夺框而出的逼真感，甚至把景物塑造成圆雕的礼视觉效果。
        \n&#160; &#160; &#160; &#160;此外，瓯塑与一般浮雕相比，还有一个明显的特色，即它还借助色彩描绘光线的强弱、色调的冷暖和深远的空间，从而大大加强了画面的艺术感染力。在这一点上，它与西方写实的油画方法一样。光色原理与色调处理成了瓯塑中的一种不可缺少的艺术手段。所以瓯塑艺术既是一种古老的艺术，也是一种脱颖而出的年青的艺种。艺人们的可贵的大胆的创新使瓯塑具有其他艺种所不及的强烈时代气息。</string>
    <string name="oszytd">&#160; &#160; &#160; &#160;瓯塑具有构图自由，层次清晰，色彩明快，立体感强的特点。画面色彩明快，构图格局自由，层次清晰，立体感强，多用于大插屏、挂屏、多扇联屏、挂钟及小首饰箱，内容有花鸟、山水和戏曲人物等。新的瓯塑技艺的一个鲜明特征，是把雕塑、绘画两种不同特点的艺术，有机地结合起来。它具有圆雕和浮雕的长处，因此，它是雕塑。它又吸收了西洋和中国绘画方面的技法，特别是西洋画的用光线、色彩的原理表示立体、空间、质感等，熔雕塑，绘画特长于一炉，融会贯通，别具一格。</string>
    <string name="osccyy">&#160; &#160; &#160; &#160;瓯塑保护与传承工作中存在的问题有以下几点：瓯塑资源消亡速度快；传承意识参差不齐；建设专项资金未能落实在刀刃上等。在当前，瓯塑艺术要面向现代化、面向世界、面向未来，改变传统的、落后的理念，不断提高创新创意的能力，参与市场竞争。同时，传承、创新、发展瓯塑艺术，还需要政府、社会的共同努力，建立全方位的机制、搭建更多创新平台、培养更多传承人……让瓯塑这项温州独有的民间艺术为温州的文化建设添砖加瓦。</string>
    <string name="kqjj">&#160; &#160; &#160; &#160;温州昆曲是浙江省温州市的地方戏曲剧种之一，属于中国南方昆曲的一个流派，因流行在永嘉一带，又称“永昆”。它与苏州昆曲基本相似，但曲调稍紧，节奏教快，其道白多用温州方言。伴奏以笛为主，其曲调古朴、轻柔、缠绵动人，其抑扬快慢，按固定曲牌演唱，规定十分严格。其剧目有《琵琶记》 、 《雷峰塔》 、 《连环记》等，表演艺术上具有朴质、自然、明快等特点。最早班名叫“同富”、“品玉”。</string>
</resources>